# sphinx_thrift

./: mypy.ini  pyproject.toml
example/: Example.thrift  Makefile  conf.py  index.rst  reference.rst  xreftest.rst
sphinx_thrift/: __init__.py  documenter.py  domain.py  parser.py  thrift_ast.py
test/: test_parser.py
