[tool.poetry]
name = "sphinx-thrift"
version = "0.1.0"
description = ""
authors = ["Csonkás Kristóf Gyula <csonkas.kristof@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^1.8"
attrs = "^19.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.670.0"
yapf = "^0.26.0"
sphinx_rtd_theme = "^0.4.3"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
